--- a/labs/lab_5.Rmd
+++ b/labs/lab_5.Rmd
@@ -51,6 +51,16 @@ where $D_i = 0$ if the car has automatic transmission and $D_i = 1$ if it has a 
 As discussed in lecture, when we have a regression that is structured this way, the intercept is equal to the mean of the "untreated" category and the slope is the difference in means. Can you verify this?
 
 *YOUR CODE HERE*
+```{r}
+df <- car_data %>%
+    group_by(am) %>% 
+    summarize(diff_in_means = mean(mpg))
+
+df <- car_data %>% 
+    summarize(mean(mpg[am == 1])- mean(mpg[am == 0]))
+df
+
+```
 
 ### Extracting info from a regression
 
@@ -65,6 +75,14 @@ my_resid_1 <- model_1$residuals
 Since we have the residuals and the fitted values, we should be able to recreate the original `mpg` column. See if you can recreate the mpg column and verify that they are the same.
 
 *YOUR CODE HERE*
+```{r}
+my_mpg <- model_1$fitted.values + model_1$residuals
+# how to compare? check if two values are very close to rounding error
+near(my_mpg, car_data$mpg)
+mean(as.logical(near(my_mpg, car_data$mpg)))
+FALSE %in% near(my_mpg, car_data$mpg)
+```
+
 
 ## Adding a predictor
 
@@ -73,10 +91,22 @@ Let's think more critically about the regression we ran above. There's an appare
 To make the interpretation easier, let's create a new indicator variable called `sport` which takes on the value 1 if the displacement is greater than 250 cubic inches.
 
 *YOUR CODE HERE*
+```{r}
+car_data <- car_data %>% 
+    mutate(sport = ifelse(disp > 250, 1, 0))
+```
+
+
 
 Now, let's run the regression again, but include `sport`. Use `lm_robust()` from `estimatr` instead of `lm`.
 
 *YOUR CODE HERE*
+```{r}
+model <- estimatr::lm_robust(formula = mpg ~ am + sport, data = car_data) %>% 
+    summary()
+model
+```
+
 
 What happened to the intercept and coefficient on `am`? What does the coefficient on `sport` mean? What happened to the value of $R^2$?
 
@@ -85,6 +115,9 @@ What happened to the intercept and coefficient on `am`? What does the coefficien
 Let's suppose we hypothesize that manual transmission sports cars are less fuel efficient and manual transmission non-sports cars are more fuel efficient. We might think that in non-sports cars, manual transmissions are found on the cheapest models which also have the smallest engines and are lightest, leading to better fuel economy. For sports cars, maybe manual transmissions are primarily found in beefy American muscle cars, which are less fuel efficient than their more refined automatic transmission equipped European counterparts. One way to get at this is to add an *interaction term*.
 
 The way to add an interaction term to your model is by including the product of two independent variables. Again, let's use `lm_robust()`.
+
+interactive: only when both are present
+diff-in-diff for either variable thought as treatment  
 
 *YOUR CODE HERE*
 
@@ -128,6 +161,8 @@ plot_1
 We colored by country because there seemed to be clusters of points that were behaving differently. Each line represents an OLS regression for a specific country. Use your data wrangling skills and the ggplot code above to find the slope and intercept of the regression for the United Kingdom.  
 
 *YOUR CODE HERE*
+
+separate data generating process of export and import  
 
 Interpret the results (remember that the independent variable is continuous). Does the intercept make sense? What does this tell us about this model's ability to generate out of sample predictions? Notice the $R^{2}$ value. Does it tell us anything about whether this is a "good" model?
 
